samples/kubernetes/Azure/sample-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <appName>
spec:
  selector:
    matchLabels:
      app: <appName>
  template:
    metadata:
      labels:
        app: <appName> # the label for the pods and the deployments
    spec:
      containers:
      - name: <appName>
        image: <acrname>.azurecr.io/<appName>:v1 # IMPORTANT: update with your own repository
        imagePullPolicy: Always
        ports:
        - containerPort: 3000 # the application listens to this port
        resources:
          requests: # minimum resources required
            cpu: 250m
            memory: 64Mi
          limits: # maximum resources allocated
            cpu: 500m
            memory: 256Mi
        readinessProbe: # is the container ready to receive traffic?
          httpGet:
            port: 3000
            path: /healthz
        livenessProbe: # is the container healthy?
          httpGet:
            port: 3000
            path: /healthz

# Create a service for the deployment
apiVersion: v1
kind: Service
metadata:
  name: <appName>
spec:
  selector:
    app: <appName>
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
