samples/kubernetes/Azure/ingress-lb-service.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: <appName>
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: frontend.<ingress ip>.nip.io # IMPORTANT: update <ingress ip> with the dashed public IP of your ingress, for example frontend.13-68-177-68.nip.io
    http:
      paths:
      - backend:
          serviceName: <appName>
          servicePort: 80
        path: /
